# yara-x

./: .gitignore  Cargo.toml
.github/workflows/: release.yaml
go/: .gitignore  go.mod  yara_x_capi.pc
java/: Cargo.toml  Makefile  com_datasafe_yara_Engine.h  pom.xml
java/src/: lib.rs  walk.rs
java/src/main/java/com/datasafe/yara/: Engine.java  IJavaRule.java  MatchType.java  Matches.java  MatchingRules.java  Metadata.java  Patterns.java  RecallResults.java  ScanResults.java  Scanner.java  iScanStrategy.java
java/src/main/java/com/datasafe/yara/impl/: JavaRuleBase.java  NullStrategy.java  SpeedLimitStrategy.java
java/src/test/java/com/datasafe/yara/: EngineCase.java
lib/: Cargo.toml  build.rs
lib/src/compiler/: mod.rs
lib/src/modules/: add_modules.rs  mod.rs  modules.rs  python.rs
lib/src/modules/protos/: python.proto
lib/src/re/: parser.rs
lib/src/re/thompson/: compiler.rs
parser/src/: report.rs
parser/src/parser/: cst2ast.rs  grammar.pest
py/: Cargo.toml  pyproject.toml
py/src/: lib.rs
py/tests/: test_api.py
rules/: a.yara
