# Copyright 2024 brian <gao.brian@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "yara-java"
version = "0.1.0"
edition = "2021"
description = "Java bindings for yara-x"
keywords = ["interpreter", "opa", "policy-as-code", "rego"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
serde_json = { version = "1.0.116"}
jni = "0.21.1"
cedar-policy = "3"
yara-x = { workspace = true }
protobuf-json-mapping = { workspace = true }
globwalk = { workspace = true }
enable-ansi-support = { workspace = true }
yara-x-parser = { workspace = true }
protobuf = "3.5.0"
crossbeam = "0.8.4"
crossterm = "0.28.1"
superconsole = "0.2.0"
quote = "1.0.36"
syn = "2.0.66"